# wasm-mobile

./: .gitignore  Cargo.toml  README.md  SPEC.md
android-host/: build.gradle.kts  gradle.properties  settings.gradle.kts
android-host/sdk/: build.gradle.kts
android-host/sdk/src/androidTest/java/com/example/wasmmobile/: FeatureFlagBenchmarkInstrumentedTest.kt  FeatureFlagEngineInstrumentedTest.kt
android-host/sdk/src/main/cpp/: CMakeLists.txt  feature_flag_jni.cpp
artifacts/: README.md
docs/: DESIGN.md  REPORT.md
fixtures/: feature_flag_cases.json
ios-host/: Package.swift
ios-host/Sources/WasmHostBridge/include/: wasm_host_runtime.h
ios-host/Sources/WasmMobile/: FeatureFlagEngine.swift  FeatureFlagModels.swift  WasmMobileResources.swift
ios-host/Sources/WasmMobile/Resources/: shared-core.wasm
ios-host/Tests/WasmMobileTests/: FeatureFlagBenchmarkTests.swift  FeatureFlagEngineTests.swift
ios-host/WasmMobile.xcodeproj/: project.pbxproj
ios-host/WasmMobile.xcodeproj/xcshareddata/xcschemes/: WasmMobileDevice.xcscheme
ios-host/XcodeProject/WasmMobile/: WasmHostRuntimeBridge.h  WasmHostRuntimeBridge.m  WasmMobile-Bridging-Header.h  WasmMobile.h
ios-host/scripts/: generate_xcodeproj.rb
scripts/: bench.sh  bench_android_device.sh  bench_devices.sh  bench_ios_device.sh  bootstrap.sh  build_wasm.sh  extract_xcresult_attachment.py  sync_artifacts.sh  test_android.sh  test_ios.sh
shared-core/: Cargo.toml
shared-core/host-bridge/: wasm_host_runtime.c  wasm_host_runtime.h
shared-core/src/: lib.rs
shared-core/tests/: fixtures.rs
(+2 files in other folders)
