[package]
name = "shared-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.217", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.149", default-features = false, features = ["alloc"] }
wee_alloc = "0.4.5"

[dev-dependencies]
serde_json = { version = "1.0.149", default-features = false, features = ["alloc"] }

